# rehoboth-genesis

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
archive/: evolution_1770929026.py  evolution_1770932713.py  evolution_1770943541.py
dashboard/: app.py
dashboard/templates/: index.html  manifest.json  sw.js
nexus/: __init__.py  __main__.py  agents.py  config.py  core.py  doctor.py  errors.py  learn.py  personality.py  phone.py  plan.py  safety.py  self_improve.py  steward.py  sync.py  thinking.py  ui.py  voice.py
nexus/agent/: __init__.py  evolution_manager.py  orchestrator.py  reflection.py  stability_gate.py
nexus/automation/: __init__.py  api_client.py  browser.py  tools.py
nexus/cli/: commands.py  onboarding.py  repl.py  welcome.py
nexus/dashboard/: api.py  app.py
nexus/mcp/: __init__.py
nexus/memory/: __init__.py  shadow.py  vectors.py
nexus/orchestrator/: decomposer.py  executor.py
nexus/plugins/: __init__.py
nexus/providers/: __init__.py  base.py  manager.py
nexus/resilience/: circuit_breaker.py
nexus/sessions/: __init__.py
nexus/skills/: __init__.py  discovery.py
nexus/termux/: __init__.py  api.py  battery.py  clipboard.py  notifications.py  registry.py  status_bar.py
nexus/tools/: __init__.py  base.py  core.py  diff_tool.py
nexus/tui/: __init__.py  app.py  colors.py  palette.py  state.py  styles.css  task_wrapper.py  widgets.py
nexus/utils/: __init__.py  dependencies.py
projects/: auth_service.py  evolution_1770950914.py  evolution_1770951485.py  evolution_1770952671.py  evolution_1770955342.py  evolution_1770955466.py  evolution_1770955572.py  evolution_1770955647.py  evolution_1770956077.py  evolution_1770956209.py  evolution_1770956316.py  evolution_1770956427.py  orchestrator_core.py  requirements.txt
seed/: generator.py  git_manager.py  watcher.py
tests/: test_harness.py  test_orchestration.py
