[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus - A powerful self-hosted AI coding agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nexus Team"}
]
keywords = ["ai", "coding", "agent", "cli", "llm", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "flask>=3.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0",
    "textual>=0.50.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
voice = [
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.0",
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "elevenlabs>=1.0.0",
]
automation = [
    "playwright>=1.40.0",
]
all = [
    "duckduckgo-search>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nexus = "nexus.cli:main"

[project.urls]
Homepage = "https://github.com/nexus-ai/nexus"
Repository = "https://github.com/nexus-ai/nexus"

[tool.setuptools]
packages = ["nexus", "nexus.agent", "nexus.cli", "nexus.providers", "nexus.tools", "nexus.memory", "nexus.utils", "nexus.dashboard", "nexus.mcp", "nexus.plugins", "nexus.skills", "nexus.termux", "nexus.tui", "nexus.sessions", "nexus.automation"]
py-modules = ["nexus.agents", "nexus.plan", "nexus.thinking", "nexus.ui", "nexus.safety", "nexus.sync", "nexus.learn", "nexus.self_improve", "nexus.personality", "nexus.phone", "nexus.voice", "nexus.config"]



[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
