[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus - A powerful self-hosted AI coding agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Nexus Team"}
]
keywords = ["ai", "coding", "agent", "cli", "llm", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
tui = [
    "textual>=0.50.0",
]
dashboard = [
    "flask>=3.0.0",
    "flask-socketio>=5.0.0",
]
voice = [
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.0",
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "elevenlabs>=1.0.0",
]
browser = [
    "playwright>=1.40.0",
]
all = [
    "duckduckgo-search>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nexus = "nexus.cli:main"

[project.urls]
Homepage = "https://github.com/alpha-1-design/Nexus"
Repository = "https://github.com/alpha-1-design/Nexus"

[tool.setuptools]
packages = ["nexus"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "import-not-found", "valid-type", "var-annotated", "annotation-unchecked", "no-any-return", "arg-type", "attr-defined", "override", "operator", "misc", "assignment", "index", "return-value", "union-attr"]
